--- a/main.html
+++ b/main.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <title>Home</title>
@@ -10,3 +11,4 @@
 <body>
     <h1> a </h1>
 </body>
+</html>
